--- a/Sunshine/app/src/main/AndroidManifest.xml
+++ b/Sunshine/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <provider
+            android:name="com.example.grishman.sunshine.data.WeatherProvider"
+            android:authorities="com.example.grishman.sunshine" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
