--- a/Sunshine/app/src/main/AndroidManifest.xml
+++ b/Sunshine/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
 
         <activity
             android:name=".MainActivity"
+            android:theme="@style/ForecastTheme"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +41,8 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/settings_activity"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/SettingsTheme">>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.grishman.sunshine.MainActivity" />
